# Nexus_Lang

./: CMakeLists.txt  README.md
Src/: enviorment.h  hello.nx  interpreter.h  lexer.h  main.cpp  makefile  value.h
Src/ml/: neural_network.h
